# ResNet-Based-Skin-Lesion-Classification-System

./: .gitignore  CLAUDE.md  categories.md  main.py  pyproject.toml
scripts/: images.py
src/data/: datapre.py  loader.py
