[project]
name = "resnet-based-skin-lesion-classification-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

   " pandas==2.3.3",
"matplotlib==3.10.7",
"torch==2.10.0",
"torchvision==0.25.0",
"fastapi==0.129.0",
"ruff==0.15.2",
"uvicorn==0.41.0",

]
